# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2021-08-26 Michael Truog   <mjtruog at protonmail dot com>

    * Add the validate_response argument to
      cloudi_service_cron and cloudi_service_send for more
      explicit validation that is configurable
    * Add cloudi_service_shell:validate_response/2
      for default validate_response argument use in
      cloudi_service_cron and cloudi_service_send

2021-08-25 Michael Truog   <mjtruog at protonmail dot com>

    * Add cloudi_service_send for service request sends that must
      occur based on service configuration argument data
      (e.g., for cloudi_service_api_batch or configuration file use)
    * Remove cloudi_service_filesystem notify functions because
      they were assuming only 1 process existed
    * Fix cloudi_service_filesystem notify_one/notify_all so a
      single pattern matching a single path
      causes a single notification
      (previously an exact pattern for a GET method would affect
       the other methods present causing a notification for each method)

2021-08-24 Michael Truog   <mjtruog at protonmail dot com>

    * Add additional cloudi_ip_address:patterns/1 tests

2021-08-19 Michael Truog   <mjtruog at protonmail dot com>

    * Add cloudi_ip_address:patterns/1 for creating service name patterns
      that match IP addresses based on a CIDR notation string

2021-08-18 Michael Truog   <mjtruog at protonmail dot com>

    * Fix cloudi_ip_address so it uses standard formatting
      (no fixed size is possible due to past support of octal in IPv4)
    * Change cloudi_service_tcp and cloudi_service_udp RequestInfo for
      consistency with HTTP services
      (e.g., source-address is used instead of source_address)
    * Change cloudi_service_http_cowboy, cloudi_service_http_cowboy1 and
      cloudi_service_http_elli by removing RequestInfo
      "peer" and "peer-port" (to rely on "source-address" and "source-port")