@@ -1,6 +1,10 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fenc=utf-8 sts=4 ts=4 et nomod:
 
+2021-08-27 Michael Truog   <mjtruog at protonmail dot com>
+
+    * Improve C/C++ CloudI API backtrace configure check
+
 2021-08-26 Michael Truog   <mjtruog at protonmail dot com>
 
     * Add the validate_response argument to
